@@ -1,4 +1,4 @@
 DIST fontmatrix-0.4.2-Source.tar.gz 656806 RMD160 64b54eea1b78101650296495d68e6813dccaea6c SHA1 6d4623b0b4169e9544259d4b04f9077c902b8dc3 SHA256 3b5ad1e27b33d81fea610d4748a9a42107006a36bff277529eb3377670600075
-EBUILD fontmatrix-0.4.2.ebuild 1030 RMD160 29124f6f923693f0836b212e5eca700b047e5fbe SHA1 0f59335724eac237691065d385b1dfae2f1849da SHA256 4c4154bb3a7969cd752b45a486606444492591009e39c73b56eee08ed0f0e7c6
-MISC ChangeLog 1167 RMD160 02b4ab70dce1d14d9950536e7217392394de02ad SHA1 e8b9c51af52411e762e57ec5d291be52356d0aad SHA256 241bd66046a4434b15e629d9484067ec6dea808aedbff868c729b981cd15c508
+EBUILD fontmatrix-0.4.2.ebuild 1007 RMD160 7f65634bc8cc967133548bd9c7fb22a8c5f78f52 SHA1 1279dd32bd55975f1a040bd11d8099b00e0e8e82 SHA256 8a9d16ce3228f6830eb152915b37bdb9f935f5e4d435b53e6b3e9928792d8410
+MISC ChangeLog 1283 RMD160 a74148539dac673555d303c00c2f14f1a0499298 SHA1 1c1dcaabce5959235f685a78fb7e09111f34cd75 SHA256 837ff594a7c3b9f9db4d81cabdf758730abaf048bef39c7d5438a98138a0d2c2
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
